chemistry-game.html を更新

--- a/chemistry-game.html
+++ b/chemistry-game.html
@@ -16,7 +16,7 @@
             background-color: #f0f8ff;
             color: #333;
             /* iOSでのダブルタップによるズームを防止 */
-            touch-action: manipulation;
+            /* touch-action: manipulation; */
         }
 
         .game-container {
