--- a/password-manager-editor.html
+++ b/password-manager-editor.html
@@ -489,7 +489,7 @@
             grid-template-columns: 1fr 1fr;
             gap: 10px 15px;
             margin-top: 10px;
-            padding: 10px;
+            padding: 0;
             border-radius: 4px;
         }
         
@@ -1039,6 +1039,18 @@
         const passwordData = JSON.parse(document.getElementById('password-data').textContent);
         let accounts = passwordData.accounts;
 
+        // 個人情報の日本語ラベルマッピング
+        const personalInfoLabels = {
+            lastName: '姓LastName',
+            firstName: '名FirstName',
+            birthdate: '生年月日',
+            gender: '性別',
+            phone: '電話番号',
+            postalCode: '郵便番号',
+            country: '国',
+            prefecture: '都道府県'
+        };
+
         // DOM要素の参照: 各種HTML要素を取得してオブジェクトに格納
         const domElements = {
             cardContainer: document.getElementById('card-container'),
@@ -1210,8 +1222,9 @@
             const detailsContent = document.createElement('div');
             detailsContent.className = 'details-content';
 
+            // 日本語ラベルで表示
             ['lastName', 'firstName', 'birthdate', 'gender', 'phone', 'postalCode', 'country', 'prefecture'].forEach(key => {
-                addCardItem(detailsContent, key, account[key]);
+                addCardItem(detailsContent, personalInfoLabels[key] || key, account[key]);
             });
 
             const addressGroup = createAddressGroup(account.address);
