--- a/minecraft-map-website.html
+++ b/minecraft-map-website.html
@@ -537,7 +537,7 @@
                 真実の扉を開くことができるか。知恵と洞察力、そして勇気が試される最高難易度の挑戦が待っている。
             </p>
             <div class="cta-buttons">
-                <a href="#download" class="btn btn-primary">今すぐダウンロード</a>
+                <a href="https://mimneko.github.io/app/README.md" class="btn btn-primary" download>今すぐダウンロード</a>
                 <a href="#features" class="btn btn-secondary">詳細を見る</a>
             </div>
         </div>
@@ -648,7 +648,7 @@
                         <span>難易度: 最高レベル</span>
                     </div>
                 </div>
-                <a href="#" class="btn btn-primary" style="font-size: 1.2rem; padding: 1.2rem 3rem;">
+                <a href="https://mimneko.github.io/app/README.md" class="btn btn-primary" style="font-size: 1.2rem; padding: 1.2rem 3rem;" download>
                     マップをダウンロード
                 </a>
                 <p style="margin-top: 1rem; font-size: 0.9rem; color: var(--text-dim);">
