--- a/eto.html
+++ b/eto.html
@@ -12,7 +12,7 @@
         }
         
         body {
-            font-family: Noto Sans JP,Hiragino Kaku Gothic ProN,Yu Gothic Medium,Hiragino Sans,Meiryo,Helvetica Neue,Arial,sans-serif;
+            font-family: "Noto Sans JP", "Hiragino Kaku Gothic ProN", "Yu Gothic Medium", "Hiragino Sans", "Meiryo", "Noto Sans CJK JP", "Roboto", "MS PGothic", "Helvetica Neue", Arial, sans-serif;
             line-height: 1.6;
             color: #2c3e50;
             min-height: 100vh;
@@ -80,7 +80,7 @@
             font-weight: 400;
         }
         
-        .section {
+        section {
             margin: 50px 0;
             padding: 0;
         }
@@ -262,7 +262,7 @@
             <!-- ここにJavaScriptで去年・今年・来年の干支を動的に挿入 -->
         </div>
 
-        <div class="section">
+        <section>
             <h2>十干十二支とは</h2>
             <div class="explanation">
                 十干十二支（じっかんじゅうにし）は、中国古来の暦法で、十干と十二支を組み合わせた60通りの組み合わせで年や日を表現する体系です。日本では干支（えと）として親しまれており、年の象徴として広く使われています。60年で一回りするため「還暦」の語源となっています。
@@ -705,9 +705,9 @@
             <div class="note">
                 国立国会図書館<sup><a href="#ref1">1</a></sup>では「乙巳」の読みを「いつし」としているが、「乙巳の変」<sup><a href="#ref2">2</a></sup>から本記事では「イッシ」とした。
             </div>
-        </div>
+        </section>
 
-        <div class="section">
+        <section>
             <h2>十干</h2>
             <div class="explanation">
                 十干は、甲・乙・丙・丁・戊・己・庚・辛・壬・癸の10の要素からなり、五行思想（木・火・土・金・水）と陰陽思想を組み合わせたものです。
@@ -736,9 +736,9 @@
                     <tr><td class="kanji-large">癸</td><td>みずのと</td><td>キ</td><td>水</td><td>陰</td></tr>
                 </tbody>
             </table>
-        </div>
+        </section>
 
-        <div class="section">
+        <section>
             <h2>五行思想</h2>
             <div class="explanation">
                 五行思想は、万物を木・火・土・金・水の5つの要素で説明する中国古来の思想です。十干は五行と陰陽を組み合わせて構成されています。
@@ -798,9 +798,9 @@
                     </tr>
                 </tbody>
             </table>
-        </div>
+        </section>
 
-        <div class="section">
+        <section>
             <h2>陰陽思想</h2>
             <div class="explanation">
                 陰陽思想は、万物を陰と陽の2つの相対する力で説明する思想です。十干では「兄（え）」が陽、「弟（と）」が陰を表します。
@@ -836,9 +836,9 @@
                     </tr>
                 </tbody>
             </table>
-        </div>
+        </section>
 
-        <div class="section">
+        <section>
             <h2>十二支</h2>
             <div class="explanation">
                 十二支は、子・丑・寅・卯・辰・巳・午・未・申・酉・戌・亥の12の動物で表される体系です。時刻や方角も表現し、12年で一回りします。
@@ -954,7 +954,7 @@
                     </tr>
                 </tbody>
             </table>
-        </div>
+        </section>
 
         <div class="references">
             <h2>参考文献</h2>
