--- a/eto.html
+++ b/eto.html
@@ -70,6 +70,7 @@
             font-size: 1.2em;
             margin-bottom: 12px;
             border: none;
+            background-color: transparent;
             padding: 0;
             color: #1a252f;
         }
