--- a/chat-interface.html
+++ b/chat-interface.html
@@ -391,6 +391,7 @@
             margin-bottom: 24px;
             display: flex;
             flex-direction: column;
+            overflow-x: hidden;
         }
 
         .message-header {
@@ -418,11 +419,17 @@
         .message-content {
             padding: 12px 16px;
             border-radius: 8px;
-            max-width: 100%;
+            max-width: 90%;
             align-self: flex-start;
             line-height: 1.6;
             word-wrap: break-word;
-            overflow-x: auto; /* ★ 修正箇所: 横方向のオーバーフロー時にスクロールバーを表示 */
+            overflow-x: hidden;
+        }
+
+        .katex-display {
+            overflow-x: auto;
+            margin: 8px 0;
+            padding: 8px 0;
         }
 
         .user-message {
@@ -440,6 +447,7 @@
             display: flex;
             align-items: center;
             flex-shrink: 0;
+            bottom: 0;
         }
 
         .chat-input {
@@ -507,7 +515,7 @@
         }
 
         /* レスポンシブ対応 */
-        @media (max-width: 768px) {
+        @media (max-width: 1030px) {
             body {
                 flex-direction: column;
             }
@@ -534,6 +542,10 @@
             
             .hamburger-btn {
                 display: block;
+            }
+
+            .messages {
+                max-width: 100%;
             }
 
             #mobile-actions-trigger {
@@ -591,10 +603,6 @@
             .actions-dropdown .mobile-only-text {
                 display: inline-block;
                 margin-left: 8px;
-            }
-
-            .messages {
-                max-width: 100%;
             }
         }
         
