kanji-graph.html を更新
色変更その2

--- a/kanji-graph.html
+++ b/kanji-graph.html
@@ -245,10 +245,10 @@
             margin: 0;
         }
         /* 漢字の由来による色のスタイル */
-        .shokei { color: #2ecc71; } /* 象形 */
-        .shiji { color: #f39c12; } /* 指事 */
-        .kaii { color: #3498db; } /* 会意 */
-        .keisei { color: #e74c3c; } /* 形声 */
+        .shokei { color: #f39c12; } /* 象形 */
+        .shiji { color: #2ecc71; } /* 指事 */
+        .kaii { color: #e74c3c; } /* 会意 */
+        .keisei { color: #3498db; } /* 形声 */
         .kaiikeisei { color: #9b59b6; } /* 会意形声 */
         .parts { color: #343a40; } /* パーツ */
 
