--- a/kanji-graph.html
+++ b/kanji-graph.html
@@ -294,10 +294,10 @@
         <h1>漢字構成要素グラフ</h1>
 
         <ul class="legend">
-            <li class="legend-item"><div class="legend-color" style="background-color: #2ecc71;"></div><span>象形：実物の形を表した文字</span></li>
-            <li class="legend-item"><div class="legend-color" style="background-color: #f39c12;"></div><span>指事：抽象的な概念を図形化した文字</span></li>
-            <li class="legend-item"><div class="legend-color" style="background-color: #3498db;"></div><span>会意：複数の意味を組み合わせた文字</span></li>
-            <li class="legend-item"><div class="legend-color" style="background-color: #e74c3c;"></div><span>形声：意味と音の組み合わせ</span></li>
+            <li class="legend-item"><div class="legend-color" style="background-color: #f39c12;"></div><span>象形：実物の形を表した文字</span></li>
+            <li class="legend-item"><div class="legend-color" style="background-color: #2ecc71;"></div><span>指事：抽象的な概念を図形化した文字</span></li>
+            <li class="legend-item"><div class="legend-color" style="background-color: #e74c3c;"></div><span>会意：複数の意味を組み合わせた文字</span></li>
+            <li class="legend-item"><div class="legend-color" style="background-color: #3498db;"></div><span>形声：意味と音の組み合わせ</span></li>
             <li class="legend-item"><div class="legend-color" style="background-color: #9b59b6;"></div><span>会意形声：会意と形声の併用</span></li>
             <li class="legend-item"><div class="legend-color" style="background-color: #000000;"></div><span>パーツ：漢字の構成要素</span></li>
         </ul>
@@ -341,10 +341,10 @@
         document.addEventListener("DOMContentLoaded", function () {
             const KANJI_DATA_URL = 'https://mimneko.github.io/kanji-graph/kanji-list.json';
             const NODE_COLORS = {
-                '象形': '#2ecc71',
-                '指事': '#f39c12',
-                '会意': '#3498db',
-                '形声': '#e74c3c',
+                '象形': '#f39c12',
+                '指事': '#2ecc71',
+                '会意': '#e74c3c',
+                '形声': '#3498db',
                 '会意形声': '#9b59b6',
                 'パーツ': '#000000',
                 'default': '#6c757d'
