--- a/漢字/eto.html
+++ b/漢字/eto.html
@@ -5,7 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>干支</title>
     <link rel="stylesheet" href="styles.css" />
-    <style>        
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+        }
+        
         .year-display {
             background: #f8fafc;
             border: 1px solid #e2e8f0;
@@ -878,4 +882,5 @@
         renderEtoYearDisplay();
     </script>
 </body>
+
 </html>
